# agentcop

./: .gitignore  .graphify_ast.json  .graphify_detect.json  .graphify_uncached.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh.md  ROADMAP.md  SECURITY.md  agentcop-scanner.db  agentcop.db  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
agentcop-scanner/: main.py
demos/: README.md  ghost_in_the_wire.py  run_demo.sh  the_amplifier.py  the_assistant.py  the_eraser.py  the_flood.py  the_glitch.py  the_ransomware.py  the_silent_worm.py  the_sleeper.py  the_trading_bot.py
docs/: index.md
docs/adapters/: autogen.md  crewai.md  datadog.md  haystack.md  langfuse.md  langgraph.md  langsmith.md  llamaindex.md  moltbook.md  semantic_kernel.md
docs/api-reference/: mcp.md
docs/concepts/: reliability.md  trust-chain.md
docs/guides/: claw-skills-verification.md  mcp-server.md  mcp-server.zh.md  openclaw.md  reliability.md  runtime-security.md  trust-chain.md
hooks/agentcop-monitor/: HOOK.md  handler.ts
plugins/agentcop-plugin/: index.js  openclaw.plugin.json  package.json
plugins/agentcop-plugin/lib/: alerts.js  badge.js  detectors.js
plugins/agentcop-plugin/tests/: alerts.test.js  badge.test.js  compliance.test.js  detectors.test.js
skills/agentcop/: SKILL.md  skill.py
src/agentcop/: __init__.py  badge.py  config.py  cop.py  event.py  identity.py  mcp_server.py  otel.py  sentinel.py  violations.py
src/agentcop/adapters/: __init__.py  _runtime.py  autogen.py  base.py  crewai.py  datadog.py  haystack.py  langfuse.py  langgraph.py  langsmith.py  llamaindex.py  moltbook.py  semantic_kernel.py
src/agentcop/approvals/: __init__.py
src/agentcop/gate/: __init__.py
src/agentcop/permissions/: __init__.py
src/agentcop/reliability/: __init__.py  adapters.py  badge_integration.py  causality.py  cli.py  clustering.py  events.py  instrumentation.py  leaderboard.py  metrics.py  models.py  prediction.py  prometheus.py  store.py
src/agentcop/sandbox/: __init__.py
src/agentcop/trust/: __init__.py  attestation.py  boundaries.py  chain.py  context_guard.py  hierarchy.py  interop.py  lineage.py  memory_guard.py  models.py  observability.py  provenance.py  rag_trust.py
src/sentinel_core/: event.py  otel.py  sentinel.py
src/sentinel_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sentinel_core/adapters/: base.py
tests/: test_adapter.py  test_agent_sandbox.py  test_approval_boundary.py  test_approvals.py  test_autogen_adapter.py  test_badge.py  test_crewai_adapter.py  test_datadog_adapter.py  test_event.py  test_gate.py  test_haystack_adapter.py  test_identity.py  test_langfuse_adapter.py  test_langgraph_adapter.py  test_langsmith_adapter.py  test_llamaindex_adapter.py  test_mcp_load.py  test_mcp_performance.py  test_mcp_server.py  test_moltbook_adapter.py  test_otel.py  test_permissions.py  test_reliability.py  test_reliability_advanced.py  test_reliability_final.py  test_reliability_store.py  test_sandbox.py  test_semantic_kernel_adapter.py  test_sentinel.py  test_tool_permission_layer.py  test_trust_attestation.py  test_trust_boundaries.py  test_trust_chain.py  test_trust_context_guard.py  test_trust_hierarchy.py  test_trust_integration.py  test_trust_interop.py  test_trust_lineage.py  test_trust_memory_guard.py  test_trust_models.py  (+4 more)
