[project]
name = "agentcop"
version = "0.1.9"
description = "Universal forensic auditor for agent systems — OTel-aligned event schema, pluggable violation detectors"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Shay Mizuno"},
    {name = "Hind Tagmouti"},
]

license = {text = "MIT"}

dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.20",
]
langgraph = [
    "langgraph>=0.2",
]
crewai = [
    "crewai>=0.80",
]
autogen = [
    "pyautogen>=0.2",
]
llamaindex = [
    "llama-index-core>=0.10",
]
haystack = [
    "haystack-ai>=2.0",
]
semantic-kernel = [
    "semantic-kernel>=1.0",
]
langfuse = [
    "langfuse>=4.0",
]
langsmith = [
    "langsmith>=0.1",
]
ddtrace = [
    "ddtrace>=1.0",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/trusthandoff/agentcop"
Repository = "https://github.com/trusthandoff/agentcop"

[tool.setuptools.packages.find]
where = ["src"]
