[project]
name = "agentcop"
version = "0.4.2"
description = "Universal forensic auditor for agent systems — OTel-aligned event schema, pluggable violation detectors"
readme = "README.md"
requires-python = ">=3.11"

keywords = [
    "agent", "audit", "forensics", "security", "observability",
    "llm", "opentelemetry", "violation", "detector",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

authors = [
    {name = "Shay Mizuno"},
    {name = "Hind Tagmouti"},
]

license = {text = "MIT"}

dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.20",
]
langgraph = [
    "langgraph>=0.2",
]
crewai = [
    "crewai>=0.80",
]
autogen = [
    "pyautogen>=0.2",
]
llamaindex = [
    "llama-index-core>=0.10",
]
haystack = [
    "haystack-ai>=2.0",
]
semantic-kernel = [
    "semantic-kernel>=1.0",
]
langfuse = [
    "langfuse>=4.0",
]
langsmith = [
    "langsmith>=0.1",
]
ddtrace = [
    "ddtrace>=1.0",
]
watchdog = [
    "watchdog>=3.0",
]
badge = [
    "cryptography>=41.0",
]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/trusthandoff/agentcop"
Repository = "https://github.com/trusthandoff/agentcop"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments
    "SIM117", # allow nested with statements (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["agentcop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
